Render Panels Integrated Into GUI
turns out it was NPEing cause i was initalzing the GUI before the
project (so it didn't know what project.getGantt() was)
got a fix on it though, all we need to do now on the GUI end is figure
out how to render

--- a/Application/VysiChart/src/vysichart/GraphicalUserInterface.form
+++ b/Application/VysiChart/src/vysichart/GraphicalUserInterface.form
@@ -287,6 +287,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new GanttRender(project.getGantt())"/>
+              </AuxValues>
 
               <Layout>
                 <DimensionLayout dim="0">
@@ -356,6 +359,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new PERTRender(project.getPERT())"/>
+              </AuxValues>
 
               <Layout>
                 <DimensionLayout dim="0">
@@ -425,6 +431,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new WBTRender(project.getWBT())"/>
+              </AuxValues>
 
               <Layout>
                 <DimensionLayout dim="0">
