Task Input now adds parent
adds selected parent to the new task
asll that left now is dates

--- a/Application/VysiChart/src/vysichart/TaskInput.form
+++ b/Application/VysiChart/src/vysichart/TaskInput.form
@@ -65,16 +65,16 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lblTaskName" min="-2" max="-2" attributes="0"/>
                               <Component id="lblParent" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="taskName" max="32767" attributes="0"/>
-                              <Component id="taskParent" pref="80" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="taskName" min="-2" pref="80" max="-2" attributes="0"/>
+                              <Component id="taskParent" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" attributes="0">
