--- a/Application/VysiChart/src/vysichart/TaskInput.form
+++ b/Application/VysiChart/src/vysichart/TaskInput.form
@@ -55,10 +55,10 @@
     <Component class="javax.swing.JLabel" name="title">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="14" style="0"/>
+          <Font name="Tahoma" size="14" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Add New Task"/>
+        <Property name="text" type="java.lang.String" value="New Task"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="inputWrap">
@@ -133,7 +133,7 @@
                       <Component id="endMonth" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="endDay" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="37" max="32767" attributes="0"/>
+                  <EmptySpace pref="36" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
