--- a/Application/VysiChart/src/vysichart/EditTask.form
+++ b/Application/VysiChart/src/vysichart/EditTask.form
@@ -159,6 +159,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Delete"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="delTaskActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="newParent">
       <Properties>
