--- a/Application/VysiChart/src/vysichart/EditTask.form
+++ b/Application/VysiChart/src/vysichart/EditTask.form
@@ -151,6 +151,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Edit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editTaskActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="delTask">
       <Properties>
@@ -186,6 +189,7 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="newNameMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="newNameActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblStartDate">
