--- a/Application/VysiChart/src/vysichart/EditTask.form
+++ b/Application/VysiChart/src/vysichart/EditTask.form
@@ -41,35 +41,45 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="214" max="32767" attributes="0"/>
+                      <Component id="delTask" min="-2" pref="71" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="editTask" min="-2" pref="71" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="delTask" min="-2" pref="71" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="editTask" min="-2" pref="71" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblStartDate" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblEndDate" alignment="0" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="startDay" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="endDay" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="startMonth" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="endMonth" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="startYear" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="endYear" alignment="0" min="-2" pref="63" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
+                          <Component id="lblStartDate" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblEndDate" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="startMinute" alignment="0" pref="45" max="32767" attributes="0"/>
+                          <Component id="endMinute" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="startHour" alignment="0" max="32767" attributes="0"/>
+                          <Component id="endHour" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="startDay" alignment="0" max="32767" attributes="0"/>
+                          <Component id="endDay" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="startMonth" alignment="0" max="32767" attributes="0"/>
+                          <Component id="endMonth" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="startYear" alignment="0" max="32767" attributes="0"/>
+                          <Component id="endYear" alignment="0" min="-2" pref="63" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="lblDates" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -81,39 +91,46 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="title" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblTask" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="taskSelector" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="lblName" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="newName" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="lblName" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="newName" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+              <Component id="lblDates" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="newParent" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblParent" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lblStartDate" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="startYear" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="startMonth" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="startDay" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lblEndDate" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="endYear" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="endMonth" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="endDay" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblStartDate" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="startYear" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="startMonth" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="startDay" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblEndDate" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="endYear" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="endMonth" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="endDay" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="endHour" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="endMinute" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="startHour" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="startMinute" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -350,6 +367,121 @@
             <StringItem index="5" value="2014"/>
           </StringArray>
         </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="startMinute">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="13">
+            <StringItem index="0" value="_"/>
+            <StringItem index="1" value="00"/>
+            <StringItem index="2" value="05"/>
+            <StringItem index="3" value="10"/>
+            <StringItem index="4" value="15"/>
+            <StringItem index="5" value="20"/>
+            <StringItem index="6" value="25"/>
+            <StringItem index="7" value="30"/>
+            <StringItem index="8" value="35"/>
+            <StringItem index="9" value="40"/>
+            <StringItem index="10" value="45"/>
+            <StringItem index="11" value="50"/>
+            <StringItem index="12" value="55"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="endMinute">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="13">
+            <StringItem index="0" value="_"/>
+            <StringItem index="1" value="00"/>
+            <StringItem index="2" value="05"/>
+            <StringItem index="3" value="10"/>
+            <StringItem index="4" value="15"/>
+            <StringItem index="5" value="20"/>
+            <StringItem index="6" value="25"/>
+            <StringItem index="7" value="30"/>
+            <StringItem index="8" value="35"/>
+            <StringItem index="9" value="40"/>
+            <StringItem index="10" value="45"/>
+            <StringItem index="11" value="50"/>
+            <StringItem index="12" value="55"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="startHour">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="26">
+            <StringItem index="0" value="_"/>
+            <StringItem index="1" value="0"/>
+            <StringItem index="2" value="1"/>
+            <StringItem index="3" value="2"/>
+            <StringItem index="4" value="3"/>
+            <StringItem index="5" value="4"/>
+            <StringItem index="6" value="5"/>
+            <StringItem index="7" value="6"/>
+            <StringItem index="8" value="7"/>
+            <StringItem index="9" value="8"/>
+            <StringItem index="10" value="9"/>
+            <StringItem index="11" value="10"/>
+            <StringItem index="12" value="11"/>
+            <StringItem index="13" value="12"/>
+            <StringItem index="14" value="13"/>
+            <StringItem index="15" value="14"/>
+            <StringItem index="16" value="15"/>
+            <StringItem index="17" value="16"/>
+            <StringItem index="18" value="17"/>
+            <StringItem index="19" value="18"/>
+            <StringItem index="20" value="19"/>
+            <StringItem index="21" value="20"/>
+            <StringItem index="22" value="21"/>
+            <StringItem index="23" value="22"/>
+            <StringItem index="24" value="23"/>
+            <StringItem index="25" value="24"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="endHour">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="26">
+            <StringItem index="0" value="_"/>
+            <StringItem index="1" value="0"/>
+            <StringItem index="2" value="1"/>
+            <StringItem index="3" value="2"/>
+            <StringItem index="4" value="3"/>
+            <StringItem index="5" value="4"/>
+            <StringItem index="6" value="5"/>
+            <StringItem index="7" value="6"/>
+            <StringItem index="8" value="7"/>
+            <StringItem index="9" value="8"/>
+            <StringItem index="10" value="9"/>
+            <StringItem index="11" value="10"/>
+            <StringItem index="12" value="11"/>
+            <StringItem index="13" value="12"/>
+            <StringItem index="14" value="13"/>
+            <StringItem index="15" value="14"/>
+            <StringItem index="16" value="15"/>
+            <StringItem index="17" value="16"/>
+            <StringItem index="18" value="17"/>
+            <StringItem index="19" value="18"/>
+            <StringItem index="20" value="19"/>
+            <StringItem index="21" value="20"/>
+            <StringItem index="22" value="21"/>
+            <StringItem index="23" value="22"/>
+            <StringItem index="24" value="23"/>
+            <StringItem index="25" value="24"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblDates">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Dates (MM HH DD MM YYYY)"/>
       </Properties>
     </Component>
   </SubComponents>
